<resources>
    <string name="app_name">LawnCareServicesApp</string>
    <string name="button_ok">OK</string>
    <string name="homepage_button_logout">Logout</string>
    <string name="homepage_button_search">Search for Services</string>
    <string name="homepage_button_list_of_services">List of Services</string>
    <string name="homepage_button_create_client">Create Client</string>
    <string name="homepage_button_report_product">Sales Report: Product</string>
    <string name="homepage_button_report_cashier">Sales Report: Cashier</string>
    <string name="homepage_alert_dialog_unimplemented_title">Functionality not available</string>
    <string name="homepage_alert_dialog_unimplemented_subtitle">Functionality has not yet been implemented</string>
    <string name="homepage_welcome_text_start">Welcome</string>
    <string name="homepage_welcome_text_end">! What would you like to do?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_all_products">Show All Products</string>
    <string name="button_create_product">Create Product</string>
    <string name="button_home_page">View Home Page</string>
    <string name="text_view_landing_welcome">UARK Register App</string>
    <string name="text_view_products_lookup_code">LookupCode</string>
    <string name="text_view_products_count">0</string>
    <string name="text_view_products_created_on">01/01/1970</string>
    <string name="text_view_label_products_lookup_code">Lookup Code:</string>
    <string name="text_view_label_products_count">Count:</string>
    <string name="text_view_label_products_created_on">Created On:</string>
    <string name="alert_dialog_products_loading">Loading Products</string>
    <string name="alert_dialog_product_save">Saving Product...</string>
    <string name="alert_dialog_product_delete">Deleting Product...</string>
    <string name="alert_dialog_product_save_success">The product was successfully saved.</string>
    <string name="alert_dialog_product_save_failure">An issue was encountered when attempting to save the product. The changes were not saved.</string>
    <string name="alert_dialog_product_delete_success">The product was successfully deleted.</string>
    <string name="alert_dialog_product_delete_failure">An issue was encountered when attempting to delete the product. You can try again to delete the product.</string>
    <string name="alert_dialog_products_load_failure">Unable to load products listing.</string>
    <string name="alert_dialog_product_delete_confirm">Are you sure you want to delete this product? This action cannot be undone.</string>
    <string name="validation_product_lookup_code">Product lookup code may not be empty.</string>
    <string name="validation_product_count">Product count must be a number and may not be negative.</string>
    <string name="intent_extra_product">intent_extra_product</string>
    <string name="title_activity_home_page">Lawn Care Services Finder</string>
    <string name="title_activity_login">Welcome! Please log in.</string>

    <!-- Strings related to login -->
    <string name="prompt_client_id">Client ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_client_id">This Client ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_error">Login Failed</string>
    <string name="provider_box_click">Provider Role Selected...</string>
    <string name="consumer_box_click">Consumer Role Selected...</string>
    <string name="login_loading">Loading...</string>
    <string name="transaction_error">Transaction Failed</string>
    <string name="transaction_loading">Transaction Loading...</string>
    <string name="client_check">Checking for clients...</string>
    <string name="client_check_error">Failed to get client count</string>
    <string name="alert_dialog_client_loading">Creating new client...</string>
    <string name="alert_dialog_client_load_success">Create client!</string>
    <string name="alert_dialog_client_load_failure">Failed to load clients.</string>
    <string name="title_activity_create_client_view">Create Client</string>
    <string name="provider_role_switch">Provider</string>
    <string name="consumer_role_switch">Consumer</string>

    <!-- String related to transactions -->
    <string name="title_activity_transaction_acitivty">Create Transaction</string>
    <string name="select_provider_button">Select Provider</string>
    <string name="product_list_item_lookupCode">Lookup Code:</string>
    <string name="product_list_item_price">Price:</string>
    <string name="product_list_item_increment">+</string>
    <string name="product_list_item_decrement">-</string>
    <string name="unimplemented_button_click_transaction_title">Functionality not available</string>
    <string name="unimplemented_button_click_transaction_subtitle">This has not been implemented</string>
    <string name="get_products_alert">Something wen wrong while fetching product.</string>
    <string name="loading_products">Loading Products...</string>
    <string name="title_activity_messages">Messages</string>
    <string name="action_settings">Settings</string>
    <string name="large_text">Message Placeholder..</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_confirm">Checkout</string>
    <string name="transaction_done">Done</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="search_Name_Radio">Name</string>
    <string name="search_City_Radio">City</string>
    <string name="search_Services_Radio">Services</string>
    <!-- Strings related to Settings -->
    <string name="profile_overhead_text">PROFILE PAGE</string>
    <string name="profile_first_name_business_name">First Name/Business Name</string>
    <string name="profile_last_name_owner_name">Last Name/Owner Name</string>
    <string name="profile_phone_number">Phone Number</string>
    <string name="profile_email_address">Email Address</string>
    <string name="profile_street_address">Street Address</string>
    <string name="profile_city">City</string>
    <string name="profile_state">State</string>
    <string name="profile_zip">Zip</string>

<<<<<<< HEAD
=======

>>>>>>> parent of 2692c1b... Fix
    <!-- Strings related to Search Page -->
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_button">Find Services</string>
    <string name="edit_text_provider_name">Name</string>
    <string name="edit_text_city_name">City</string>
    <string name="edit_text_services">Service</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_providers">ViewProvidersActivity</string>
    <string name="provider_check_error">No providers found</string>
    <string name="performing_search">Performing search...</string>
    <string name="provider_check">Checking for providers</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="text_view_title">Search By:</string>
    <string name="text_view_or">Or</string>
    <string name="app_bar_title"></string>
<<<<<<< HEAD

    <string name="google_api_key">AIzaSyBuGVsbcnf6N8ceEuMec-RGGyi5AFpz_LY</string>
    <string name="failed_to_load_map">Location not found</string>
=======
    <string name="google_api_key">AIzaSyBuGVsbcnf6N8ceEuMec-RGGyi5AFpz_LY</string>
    <string name="failed_to_load_map">Location not found</string>
    <string name="text_view_search_results_title">Available Providers:</string>
>>>>>>> parent of 2692c1b... Fix
</resources>
