<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.uark.lawncareservicesapp.LoginActivity">

    <!-- Login progress -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="134dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/provider_role_switch"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorProviderButton"
                android:baselineAligned="false"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/provider_role_switch"
                android:visibility="visible"
                tools:focusable="auto" />

            <RadioButton
                android:id="@+id/consumer_role_switch"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="@color/colorConsumerButton"
                android:baselineAligned="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/consumer_role_switch"
                android:visibility="visible" /></RadioGroup>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="255dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/clientId"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/colorEmailAccent"
                    android:hint="@string/prompt_client_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/colorPasswordAccent"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
